--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,12 +1,10 @@
 /******************************************************************************
  * Content
  ******************************************************************************/
-
 body {
   padding-bottom: 70px;
   color: var(--global-text-color);
   background-color: var(--global-bg-color);
-
   h1,
   h2,
   h3,
@@ -16,17 +14,14 @@ body {
     scroll-margin-top: 66px;
   }
 }
-
 body.fixed-top-nav {
   // Add some padding for the nav-bar.
   padding-top: 56px;
 }
-
 body.sticky-bottom-footer {
   // Remove padding below footer.
   padding-bottom: 0;
 }
-
 .container {
   max-width: $max-content-width;
 }
@@ -36,18 +31,23 @@ body.sticky-bottom-footer {
   img {
     width: 100%;
   }
+  // 只修改 about 页面名字的字体
+  .author {
+    h1 {
+      font-family: 'Merriweather', serif;  // 替换为你想要的字体
+      font-weight: 700;
+      font-size: 2.5rem;  // 可选：调整大小
+      color: #1e3a5f;
+    }
+  }
 }
 
 // TODO: redefine content layout.
-
 /******************************************************************************
  * Publications
  ******************************************************************************/
-
 // TODO: redefine publications layout.
-
 /*****************************************************************************
 * Projects
 *****************************************************************************/
-
 // TODO: redefine projects layout.
