--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -32,14 +32,24 @@ body.sticky-bottom-footer {
   }
 }
 
-// About 页面名字样式（多个选择器确保生效）
+// About 页面名字样式 - 包括所有子元素
+.about .profile h1,
+.about .profile h1 span,
+.about .profile h1 .font-weight-bold,
+.profile .author h1,
+.profile .author h1 span,
+.post-header h1.post-title,
+.post-header h1.post-title span {
+  font-family: 'Merriweather', serif !important;
+  font-weight: 700 !important;
+  color: #1e3a5f !important;
+}
+
+// 字体大小只应用在父元素
 .about .profile h1,
 .profile .author h1,
 .post-header h1.post-title {
-  font-family: 'Merriweather', serif !important;
-  font-weight: 700 !important;
   font-size: 2.5rem !important;
-  color: #1e3a5f !important;
 }
 
 /******************************************************************************
