--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -53,8 +53,19 @@ body.sticky-bottom-footer {
 }
 
 /******************************************************************************
- * Navbar Social Icons
+ * Navbar styles
  ******************************************************************************/
+// shadow
+.navbar {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
+  transition: box-shadow 0.3s ease;
+  
+  &:hover {
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12);  
+  }
+}
+
+// icon
 .navbar {
   .navbar-brand.social {
     margin-right: auto;
