--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -32,7 +32,7 @@ body.sticky-bottom-footer {
   }
 }
 
-// About 页面名字样式 - 包括所有子元素
+// About
 .about .profile h1,
 .about .profile h1 span,
 .about .profile h1 .font-weight-bold,
@@ -45,7 +45,7 @@ body.sticky-bottom-footer {
   color: #1e3a5f !important;
 }
 
-// 字体大小只应用在父元素
+// 
 .about .profile h1,
 .profile .author h1,
 .post-header h1.post-title {
