--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -13,9 +13,9 @@
   --global-theme-color: #3b82f6; // 原来是 $purple-color
   --global-hover-color: #3b82f6; // 原来是 $purple-color
   --global-hover-text-color: #{$white-color};
-  --global-footer-bg-color: #{$grey-color-dark};
-  --global-footer-text-color: #{$grey-color-light};
-  --global-footer-link-color: #{$white-color};
+  --global-footer-bg-color: #ffffff;  //{$grey-color-dark}
+  --global-footer-text-color: #666666; //{$grey-color-light}
+  --global-footer-link-color: #666666; //{$white-color}
   --global-distill-app-color: #{$grey-color};
   --global-divider-color: rgba(0, 0, 0, 0.1);
   --global-card-bg-color: #{$white-color};
