--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -107,6 +107,6 @@ footer.fixed-bottom {
 
 footer.sticky-bottom-footer {
   border-top: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.08);
+//  box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.08);
   margin-top: 3rem;
 }
