--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -58,27 +58,19 @@ layout: default
     </p>
   </header>
   <article class="post-content">
-    <div id="markdown-content">
-      {{ content }}
-    </div>
+    {{ content }}
   </article>
-
   {% if page.citation %}
     {% include citation.liquid %}
   {% endif %}
-
+  {%- comment -%}
   {% if page.related_publications %}
     <h2>References</h2>
     <div class="publications">
       {% bibliography --group_by none --cited_in_order %}
     </div>
   {% endif %}
-
-  {% if site.related_blog_posts and site.related_blog_posts.enabled %}
-    {% if page.related_posts == null or page.related_posts %}
-      {% include related_posts.liquid %}
-    {% endif %}
-  {% endif %}
+  {%- endcomment -%}
 
   {% if site.disqus_shortname and page.disqus_comments %}
     {% include disqus.liquid %}
