--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -5,14 +5,12 @@ layout: default
 {% assign tags = page.tags | join: '' %}
 {% assign categories = page.categories | join: '' %}
 {% assign url_beginning = page.url | slice: 0, 6 %}
-
 {% if page._styles %}
   <!-- Page/Post style -->
   <style type="text/css">
     {{ page._styles }}
   </style>
 {% endif %}
-
 <div class="post">
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
@@ -41,7 +39,6 @@ layout: default
           {% endunless %}
         {% endfor %}
       {% endif %}
-
       {% if categories != '' %}
         &nbsp; &middot; &nbsp;
         {% for category in page.categories %}
@@ -63,15 +60,11 @@ layout: default
   {% if page.citation %}
     {% include citation.liquid %}
   {% endif %}
-  {%- comment -%}
-  {% if page.related_publications %}
-    <h2>References</h2>
-    <div class="publications">
-      {% bibliography --group_by none --cited_in_order %}
-    </div>
+  {% if site.related_blog_posts and site.related_blog_posts.enabled %}
+    {% if page.related_posts == null or page.related_posts %}
+      {% include related_posts.liquid %}
+    {% endif %}
   {% endif %}
-  {%- endcomment -%}
-
   {% if site.disqus_shortname and page.disqus_comments %}
     {% include disqus.liquid %}
   {% endif %}
