--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -5,12 +5,14 @@ layout: default
 {% assign tags = page.tags | join: '' %}
 {% assign categories = page.categories | join: '' %}
 {% assign url_beginning = page.url | slice: 0, 6 %}
+
 {% if page._styles %}
   <!-- Page/Post style -->
   <style type="text/css">
     {{ page._styles }}
   </style>
 {% endif %}
+
 <div class="post">
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
@@ -39,6 +41,7 @@ layout: default
           {% endunless %}
         {% endfor %}
       {% endif %}
+
       {% if categories != '' %}
         &nbsp; &middot; &nbsp;
         {% for category in page.categories %}
@@ -54,17 +57,36 @@ layout: default
       {% endif %}
     </p>
   </header>
+
   <article class="post-content">
-    {{ content }}
+    {% if page.toc and page.toc.beginning %}
+      <div id="table-of-contents">
+        {% toc %}
+      </div>
+      <hr>
+    {% endif %}
+    <div id="markdown-content">
+      {{ content }}
+    </div>
   </article>
+
   {% if page.citation %}
     {% include citation.liquid %}
   {% endif %}
+
+  {% if page.related_publications %}
+    <h2>References</h2>
+    <div class="publications">
+      {% bibliography --group_by none --cited_in_order %}
+    </div>
+  {% endif %}
+
   {% if site.related_blog_posts and site.related_blog_posts.enabled %}
     {% if page.related_posts == null or page.related_posts %}
       {% include related_posts.liquid %}
     {% endif %}
   {% endif %}
+
   {% if site.disqus_shortname and page.disqus_comments %}
     {% include disqus.liquid %}
   {% endif %}
